--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-torch>=2.0.0
-torchvision>=0.15.0
-opencv-python>=4.5.0
-numpy>=1.19.0
+torch==2.1.0
+torchvision==0.16.0
+opencv-python==4.8.1.78
+numpy==1.24.3
 pandas>=1.2.0
-matplotlib>=3.3.0
-scikit-learn>=0.24.0
+matplotlib==3.7.2
+scikit-learn==1.3.0
 SpeechRecognition==3.10.0
 pyttsx3==2.90
 nltk==3.8.1
 sounddevice==0.4.6
 PyAudio==0.2.13
-flask>=2.0.0
+Flask==3.0.0
 scipy>=1.7.0 
